--- a/test_webserv-needs_different_structure/webserv.conf
+++ b/test_webserv-needs_different_structure/webserv.conf
@@ -36,3 +36,30 @@ server {
         index index.html
     }
 }
+
+server {
+    host 0.0.0.0
+    port 8080
+    server_name example.com
+    error_page ./error_pages/
+    client_body_size 1048576
+
+    location / {
+        methods GET POST DELETE
+        root ./www
+        directory_listing on
+        index_file index.html
+        cgi_extensions .cgi .php
+    }
+
+    location /upload {
+        methods POST
+        root ./uploads
+        upload_dir ./uploads
+    }
+
+    location /redirect {
+        methods GET
+        redirection http://www.example.com/new_location
+    }
+}
