--- a/test_webserv-needs_different_structure/webserv.conf
+++ b/test_webserv-needs_different_structure/webserv.conf
@@ -2,7 +2,7 @@ server {
     host 127.0.0.1
     port 8080
     server_name example.com
-    error_page /error.html
+    error_page_dir error_pages
     client_body_size 1000000
 
     location / {
@@ -27,7 +27,7 @@ server {
     host 127.0.0.1
     port 8081
     server_name another-example.com
-    error_page /error.html
+    error_page_dir error_pages
     client_body_size 2000000
 
     location / {
@@ -41,7 +41,7 @@ server {
     host 0.0.0.0
     port 8080
     server_name example.com
-    error_page ./error_pages/
+    error_page_dir error_pages
     client_body_size 1048576
 
     location / {
