small update to test_webserv, need to figure out the correct association of methods-routes-requests, e.g. POST now uploads to a default folder

--- a/test_webserv-needs_different_structure/webserv.conf
+++ b/test_webserv-needs_different_structure/webserv.conf
@@ -1,7 +1,7 @@
 server {
     host 127.0.0.1
     port 8080
-    server_name example.com
+    server_name Server_1
     error_page_dir error_pages
     client_body_size 1000000
 
@@ -11,10 +11,10 @@ server {
         index index.html
     }
 
-    location /uploads {
+    location /Server_1/uploads {
         methods POST
-        root /var/www/uploads
-        upload_dir /var/www/uploads
+        root /Server_ 1/uploads
+        upload_dir /Server_1/uploads
     }
 
     location /redirect {
@@ -40,7 +40,7 @@ server {
 server {
     host 0.0.0.0
     port 8080
-    server_name example.com
+    server_name Server_2
     error_page_dir error_pages
     client_body_size 1048576
 
@@ -52,10 +52,10 @@ server {
         cgi_extensions .cgi .php
     }
 
-    location /upload {
+    location /Server_2/upload {
         methods POST
-        root ./uploads
-        upload_dir ./uploads
+        root /Server_2/uploads
+        upload_dir /Server_2/uploads
     }
 
     location /redirect {
