test_webserv, added some default pages and improved the POST method to store in correct directory

--- a/test_webserv-needs_different_structure/webserv.conf
+++ b/test_webserv-needs_different_structure/webserv.conf
@@ -6,15 +6,15 @@ server {
     client_body_size 1000000
 
     location / {
-        methods GET POST DELETE
-        root /var/www/html
+        methods GET
+        root ./var/www/html
         index index.html
     }
 
-    location /Server_1/uploads {
+    location /Server_1_uploads {
         methods POST
-        root /Server_ 1/uploads
-        upload_dir /Server_1/uploads
+        root ./Server_1_uploads
+        upload_dir ./Server_1_uploads
     }
 
     location /redirect {
@@ -32,7 +32,7 @@ server {
 
     location / {
         methods GET
-        root /var/www/another
+        root ./var/www/another
         index index.html
     }
 }
@@ -45,17 +45,17 @@ server {
     client_body_size 1048576
 
     location / {
-        methods GET POST DELETE
+        methods GET
         root ./www
         directory_listing on
         index_file index.html
         cgi_extensions .cgi .php
     }
 
-    location /Server_2/upload {
+    location /Server_2_upload {
         methods POST
-        root /Server_2/uploads
-        upload_dir /Server_2/uploads
+        root ./Server_2_uploads
+        upload_dir ./Server_2_uploads
     }
 
     location /redirect {
