changed the config file a bit and started implementing a basic version of location resolving

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,12 +2,12 @@ server {
     host 127.0.0.1
     port 8080
     server_name example.com
-    error_page /error.html
+    error_page /error_pages
     client_body_size 1000000
     location / {
         methods GET POST DELETE
         root /var/www/html
-        index index.html
+        index home.html
     }
     location /uploads {
         methods POST
@@ -29,7 +29,7 @@ server {
     host 127.0.0.1
     port 8081
     server_name another-example.com
-    error_page /error.html
+    error_page /error_pages
     client_body_size 2000000
     location / {
         methods GET
