improved the resolving of the request location, added some error handling(showcase) and added some error page functionality, modified the config file to include directories for testing

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -18,6 +18,15 @@ server {
         methods GET
         redirection http://example.com
     }
+	location /methodNotAllowed {
+		methods 
+		root /var/testDirectories/methodNotAllowed
+		directory listing off
+	}
+	location /directoryListingOn {
+		methods GET
+		root /var/testDirectories/directoryListingOn
+	}
 }
 
 
