updated all of the default responses

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -21,7 +21,7 @@ server {
 	location /methodNotAllowed {
 		methods 
 		root /var/testDirectories/methodNotAllowed
-		directory listing off
+		directory_listing off
 	}
 	location /directoryListingOn {
 		methods GET
