resolving the location for the request seems to work better, needs more testing, next step apply directory listing functionality

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -26,6 +26,7 @@ server {
 	location /directoryListingOn {
 		methods GET
 		root /var/testDirectories/directoryListingOn
+		directory_listing on
 	}
 }
 
