Grabbed error pages, add reply functionality, fix loop more

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,7 +2,7 @@ server {
     host 127.0.0.1
     port 8080
     server_name example.com
-    error_page /error_pages
+    error_page /var/errorPages/
     client_body_size 1000000
     location / {
         methods GET POST DELETE
@@ -39,7 +39,7 @@ server {
     host 127.0.0.1
     port 8081
     server_name another-example.com
-    error_page /error_pages
+    error_page var/error_pages
     client_body_size 2000000
     location / {
         methods GET
