changed a bit in config file and improved a bit the homepage

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,12 +5,12 @@ server {
     error_page /var/errorPages/
     client_body_size 1000000
     location / {
-        methods GET POST DELETE
+        methods GET
         root /var/www/html
         index home.html
     }
     location /uploads {
-        methods POST
+        methods POST DELETE
         root /var/www/uploads
         upload_dir /var/www/uploads
     }
