Small visual update to mandelbrot set & config file

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -39,6 +39,6 @@ server {
     location / {
         methods GET
         root /var/www/another
-        index index.html
+        index home.html
     }
 }
