Totally broken, going to sleep, fu

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -39,6 +39,6 @@ server {
     location / {
         methods GET
         root /var/www/another
-        index home.html
+        index index.html
     }
 }
