--- a/configs/default.conf
+++ b/configs/default.conf
@@ -10,7 +10,7 @@ server {
         index home.html
     }
     location /uploads {
-        methods POST DELETE
+        methods GET POST DELETE
         root /var/www/uploads
         upload_dir /var/www/uploads
     }
