made the second server in the config file functional, now using mutiple cgi_extensions

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -8,6 +8,7 @@ server {
         methods GET
         root /var/www/html
         index home.html
+		cgi_extensions cgi py
     }
     location /uploads {
         methods GET POST DELETE
@@ -34,11 +35,12 @@ server {
     host 127.0.0.1
     port 8081
     server_name another-example.com
-    error_page var/error_pages
-    client_body_size 2000000
+    error_page /var/errorPages/
+    client_body_size 1000000
     location / {
         methods GET
         root /var/www/another
         index index.html
+		cgi_extensions cgi py
     }
 }
