Totally committing on not my branch because I forgot to change branches. Made redirection really redirect

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -17,7 +17,7 @@ server {
     }
     location /redirect {
         methods GET
-        redirection http://example.com
+        redirection http://badgerbadgerbadger.com
     }
 	location /methodNotAllowed {
 		methods 
