Quickfixed the memory leaks that were causing the webserv accumulate RAM after repeated runs without restarting, needs further investigation

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -43,4 +43,8 @@ server {
         index index.html
 		cgi_extensions cgi py
     }
+	location /redirect {
+        methods GET
+        redirection https://github.com/The-very-real-shell-corporation
+	}
 }
