--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,7 +5,7 @@ server {
     error_page /var/errorPages/
     client_body_size 1000000
     location / {
-        methods GET
+        methods GET POST
         root /var/www/html
         index home.html
 		cgi_extensions cgi py
@@ -31,8 +31,8 @@ server {
 }
 
 server {
-    host 127.0.0.1
-    port 8081
+    host 127.0.0.2
+    port 8080
     server_name another-example.com
     error_page /var/errorPages/
     client_body_size 1000000
