--- a/configs/another.conf
+++ b/configs/another.conf
@@ -1,11 +1,11 @@
 server {
-    host 127.0.0.1
+    host 127.0.0.2
     port 8080
     server_name example.com
     error_page /var/errorPages/
     client_body_size 1000000
     location / {
-        methods GET POST
+        methods GET
         root /var/www/html
         index home.html
 		cgi_extensions cgi py
@@ -13,11 +13,6 @@ server {
     location /uploads {
         methods GET POST DELETE
         root /var/www/uploads
-    }
-	location /generated {
-        methods GET POST DELETE
-        root /var/www/generated
-		directory_listing on
     }
     location /redirect {
         methods GET
@@ -36,7 +31,7 @@ server {
 }
 
 server {
-    host 127.0.0.1
+    host 127.0.0.2
     port 8081
     server_name another-example.com
     error_page /var/errorPages/
