empty config file bugfix

--- a/configs/broken.conf
+++ b/configs/broken.conf
@@ -1,4 +1,4 @@
-server {
+server 
     host 127.0.0.1
     port 8080
     server_name example.com
@@ -52,3 +52,4 @@ server {
         redirection https://github.com/The-very-real-shell-corporation
 	}
 }
+
