some bugfixing and added some error handling functionality

--- a/configs/broken.conf
+++ b/configs/broken.conf
@@ -1,6 +1,6 @@
-server 
+server {
     host 127.0.0.1
-    port 8080
+    port 8080a
     server_name example.com
     error_page /var/errorPages/
     client_body_size 1000000
