small functionality fixes for config-file, error pages, redirection

--- a/configs/broken.conf
+++ b/configs/broken.conf
@@ -1,9 +1,9 @@
 server {
-    host 127.0.0.1
-    port 8080a
+    host 127.0.0.1a
+    port 8080
     server_name example.com
-    error_page /var/errorPages/
-    client_body_size 1000000
+    error_page /var/errorPages
+    client_body_size 10000000
     location / {
         methods GET POST
         root /var/www/html
